--- a/trabajos.html
+++ b/trabajos.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.html">
+    <link rel="stylesheet" href="evidencias.html">
 </head>
 <body>
     <div style="width: 100%; height: 100%; position: relative; background: black">
         <div style="width: 1356px; height: 1018px; left: 19px; top: 751px; position: absolute; background: linear-gradient(90deg, rgba(47.07, 154.05, 96.28, 0.80) 0%, rgba(81.16, 183.12, 240.47, 0.80) 100%); border-radius: 14px; border: 6px black solid"></div>
         <img style="width: 1440px; height: 446px; left: 0px; top: 95px; position: absolute; border: 6px #FFDF8E solid" src="fondo.png" />
         <img style="width: 1440px; height: 1450px; left: 0px; top: 541px; position: absolute; border: 6px #FFDF8E solid" src="fondo.png" />
-        <img style="width: 166px; height: 161px; left: 621px; top: 1442px; position: absolute; border-radius: 89px" src="perfil.png" />
+        <a href="index.html"><img style="width: 166px; height: 161px; left: 621px; top: 1442px; position: absolute; border-radius: 89px" src="perfil.png" /></a>
         <div style="width: 940px; height: 81px; left: 250px; top: 1895px; position: absolute; background: linear-gradient(90deg, #FF1B1B 0%, #F0C451 100%); border-radius: 14px; border: 6px black solid"></div>
-        <div style="width: 368px; height: 33px; left: 590px; top: 1906px; position: absolute; color: black; font-size: 48px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">Evidencias</div>
+        <a href="index.html"><div style="width: 368px; height: 33px; left: 590px; top: 1906px; position: absolute; color: black; font-size: 48px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">Evidencias</div></a>
         <div style="width: 940px; height: 81px; left: 265px; top: 659px; position: absolute; background: linear-gradient(90deg, #2F9A60 0%, #51B7F0 100%); border-radius: 14px; border: 6px black solid"></div>
         <div style="width: 485px; height: 552.08px; left: 89px; top: 1303.92px; position: absolute">
             <div style="width: 485px; height: 552.08px; left: 0px; top: 0px; position: absolute; background: rgba(3.67, 1.82, 93.84, 0.44); box-shadow: 4px 4px 4px; filter: blur(4px)"></div>
@@ -31,7 +33,7 @@
         <div style="width: 1440px; height: 95px; left: 0px; top: 0px; position: absolute; background: #E74E4E; justify-content: center; align-items: center; display: inline-flex">
             <div style="width: 1440px; height: 95px; background: linear-gradient(90deg, #663304 0%, #E5E446 22%, #DCDE78 37%, #B05F00 85%, #FFF59D 100%); box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border: 1px #B14343 solid"></div>
         </div>
-        <img style="width: 73px; height: 68px; left: 36px; top: 19px; position: absolute; border-radius: 9999px" src="https://via.placeholder.com/73x68" />
+        <a href="index.html"><img style="width: 73px; height: 68px; left: 36px; top: 19px; position: absolute; border-radius: 9999px" src="inicio.png" /></a>
     </div>
 </body>
 </html>
