--- a/evidencias.html
+++ b/evidencias.html
@@ -7,16 +7,16 @@
 </head>
 <body>
     <div style="width: 100%; height: 100%; padding: 10px; background: white; justify-content: flex-start; align-items: flex-start; gap: 10px; display: inline-flex">
-        <img style="width: 1430px; height: 2000px" src="https://via.placeholder.com/1430x2000" />
-        <img style="width: 1430px; height: 364px; opacity: 0.80" src="https://via.placeholder.com/1430x364" />
+        <img style="width: 1430px; height: 2000px" src="3425081.jpg" />
+        <img style="width: 1430px; height: 364px; opacity: 0.80" src="wp7609542-gaming-neon-wallpapers.jpg" />
         <div style="width: 1430px; height: 240px; background: rgba(217, 217, 217, 0.50); border-radius: 45px"></div>
         <img style="width: 1430px; height: 103px" src="https://via.placeholder.com/1430x103" />
         <img style="width: 166px; height: 161px; border-radius: 89px" src="https://via.placeholder.com/166x161" />
         <div style="width: 1372px; height: 1150px; background: rgba(217, 217, 217, 0.15); border-radius: 49px"></div>
         <img style="width: 73px; height: 68px; border-radius: 9999px" src="https://via.placeholder.com/73x68" />
-        <img style="width: 309px; height: 208px; border-radius: 89px; border: 13px white solid" src="https://via.placeholder.com/309x208" />
-        <img style="width: 309px; height: 207px; border-radius: 89px; border: 13px white solid" src="https://via.placeholder.com/309x207" />
-        <img style="width: 309px; height: 207px; border-radius: 89px; border: 13px white solid" src="https://via.placeholder.com/309x207" />
+        <img style="width: 309px; height: 208px; border-radius: 89px; border: 13px white solid" src="Koromaruuu.jpeg" />
+        <img style="width: 309px; height: 207px; border-radius: 89px; border: 13px white solid" src="ot.png" />
+        <img style="width: 309px; height: 207px; border-radius: 89px; border: 13px white solid" src="new-persona-3-reload-art-v0-2pfxinfmmadc1.png" />
         <div style="width: 80px; height: 70px; background: #D9D9D9; border-radius: 10px"></div>
         <div style="width: 18px; height: 41px; color: black; font-size: 36px; font-family: Timmana; font-weight: 400; word-wrap: break-word"><</div>
         <div style="width: 940px; height: 81px; background: linear-gradient(90deg, #FF1B1B 0%, #F0C451 100%); border-radius: 14px; border: 6px black solid"></div>
@@ -24,9 +24,9 @@
         <div style="width: 18px; height: 41px; color: black; font-size: 36px; font-family: Timmana; font-weight: 400; word-wrap: break-word">1</div>
         <div style="width: 80px; height: 70px; background: #D9D9D9; border-radius: 10px"></div>
         <div style="width: 18px; height: 41px; color: black; font-size: 36px; font-family: Timmana; font-weight: 400; word-wrap: break-word">2</div>
-        <img style="width: 309px; height: 208px; border-radius: 89px; border: 13px white solid" src="https://via.placeholder.com/309x208" />
-        <img style="width: 309px; height: 207px; border-radius: 89px; border: 13px white solid" src="https://via.placeholder.com/309x207" />
-        <img style="width: 309px; height: 207px; border-radius: 89px; border: 13px white solid" src="https://via.placeholder.com/309x207" />
+        <img style="width: 309px; height: 208px; border-radius: 89px; border: 13px white solid" src="Default_vape_sad_man_3.jpg" />
+        <img style="width: 309px; height: 207px; border-radius: 89px; border: 13px white solid" src="MegaroidCity.jpg" />
+        <img style="width: 309px; height: 207px; border-radius: 89px; border: 13px white solid" src="deportes (1).png" />
         <div style="width: 368px; height: 33px; color: black; font-size: 48px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">Evidencias</div>
         <div style="width: 80px; height: 70px; background: #D9D9D9; border-radius: 10px"></div>
         <div style="width: 18px; height: 41px; color: black; font-size: 36px; font-family: Timmana; font-weight: 400; word-wrap: break-word">3</div>
@@ -34,10 +34,10 @@
         <div style="width: 18px; height: 41px; color: black; font-size: 36px; font-family: Timmana; font-weight: 400; word-wrap: break-word">4</div>
         <div style="width: 80px; height: 70px; background: #D9D9D9; border-radius: 10px"></div>
         <div style="width: 18px; height: 41px; color: black; font-size: 36px; font-family: Timmana; font-weight: 400; word-wrap: break-word">5</div>
-        <img style="width: 309px; height: 208px; border-radius: 89px; border: 13px white solid" src="https://via.placeholder.com/309x208" />
+        <img style="width: 309px; height: 208px; border-radius: 89px; border: 13px white solid" src="zelda.jpg" />
         <div style="width: 80px; height: 70px; background: #D9D9D9; border-radius: 10px"></div>
-        <img style="width: 309px; height: 207px; border-radius: 89px; border: 13px white solid" src="https://via.placeholder.com/309x207" />
-        <img style="width: 309px; height: 208px; border-radius: 89px; border: 12px white solid" src="https://via.placeholder.com/309x208" />
+        <img style="width: 309px; height: 207px; border-radius: 89px; border: 13px white solid" src="wallpaperflare.com_wallpaper (3).jpg" />
+        <img style="width: 309px; height: 208px; border-radius: 89px; border: 12px white solid" src="cAO5uXj-sports-hd-wallpapers.jpg" />
         <div style="width: 18px; height: 41px; color: black; font-size: 36px; font-family: Timmana; font-weight: 400; word-wrap: break-word">></div>
         <div style="width: 284px; height: 41px; color: black; font-size: 24px; font-family: Times New Roman; font-weight: 400; word-wrap: break-word">The Legend of Zelda</div>
     </div>
