--- a/evidencias.html
+++ b/evidencias.html
@@ -11,7 +11,7 @@
     <div style="width: 100%; height: 100%; position: relative; background: white">
         <img style="width: 1430px; height: 2000px; left: 10px; top: 10px; position: absolute" src="3425081.jpg" />
         <img style="width: 1430px; height: 364px; left: 10px; top: 99px; position: absolute; opacity: 0.80" src="fondo.png" />
-        <img style="width: 166px; height: 161px; left: 34px; top: 383px; position: absolute; border-radius: 89px" src="https://via.placeholder.com/166x161" />
+        <img style="width: 166px; height: 161px; left: 34px; top: 383px; position: absolute; border-radius: 89px" src="webp-320x320.png" />
         <div style="width: 1372px; height: 1150px; left: 34px; top: 511px; position: absolute; background: rgba(217, 217, 217, 0.15); border-radius: 49px"></div>
         <div style="width: 284px; height: 41px; left: 1450px; top: 10px; position: absolute; color: black; font-size: 24px; font-family: Times New Roman; font-weight: 400; word-wrap: break-word">The Legend of Zelda</div>
         <a href=""><img style="width: 309px; height: 208px; left: 102px; top: 643px; position: absolute; border-radius: 89px; border: 13px white solid" src="ot.png" />
@@ -31,7 +31,7 @@
         <a href=""><img style="width: 309px; height: 207px; left: 565px; top: 1207px; position: absolute; border-radius: 89px; border: 13px white solid" src="Default_vape_sad_man_3.jpg" /></a>
         <a href=""><img style="width: 309px; height: 207px; left: 565px; top: 948px; position: absolute; border-radius: 89px; border: 13px white solid" src="wallpaperflare.com_wallpaper (3).jpg" /></a>
         <a href=""><img style="width: 309px; height: 207px; left: 102px; top: 948px; position: absolute; border-radius: 89px; border: 13px white solid" src="deportes (1).png" /></a>
-        <img style="width: 1430px; height: 103px; left: 10px; top: 10px; position: absolute" src="https://via.placeholder.com/1430x103" />
+        <img style="width: 1430px; height: 103px; left: 10px; top: 10px; position: absolute" src="inicio2.png" />
         <div style="width: 18px; height: 41px; left: 432px; top: 1573px; position: absolute; color: black; font-size: 36px; font-family: Timmana; font-weight: 400; word-wrap: break-word">1</div>
         <div style="width: 18px; height: 41px; left: 895px; top: 1573px; position: absolute; color: black; font-size: 36px; font-family: Timmana; font-weight: 400; word-wrap: break-word">5</div>
         <div style="width: 18px; height: 41px; left: 248px; top: 1573px; position: absolute; color: black; font-size: 36px; font-family: Timmana; font-weight: 400; word-wrap: break-word"><</div>
