--- a/evidencias.html
+++ b/evidencias.html
@@ -14,7 +14,7 @@
         <img style="width: 166px; height: 161px; left: 34px; top: 383px; position: absolute; border-radius: 89px" src="webp-320x320.png" />
         <div style="width: 1372px; height: 1150px; left: 34px; top: 511px; position: absolute; background: rgba(217, 217, 217, 0.15); border-radius: 49px"></div>
         <div style="width: 284px; height: 41px; left: 1450px; top: 10px; position: absolute; color: black; font-size: 24px; font-family: Times New Roman; font-weight: 400; word-wrap: break-word">The Legend of Zelda</div>
-        <a href=""><img style="width: 309px; height: 208px; left: 102px; top: 643px; position: absolute; border-radius: 89px; border: 13px white solid" src="ot.png" />
+        <a href=""><img style="width: 309px; height: 208px; left: 102px; top: 643px; position: absolute; border-radius: 89px; border: 13px white solid" src="ot.png" /></a>
         <a href=""><img style="width: 309px; height: 208px; left: 565px; top: 642px; position: absolute; border-radius: 89px; border: 13px white solid" src="new-persona-3-reload-art-v0-2pfxinfmmadc1.png" /></a>
         <a href=""><img style="width: 309px; height: 208px; left: 1028px; top: 642px; position: absolute; border-radius: 89px; border: 13px white solid" src="MegaroidCity.jpg" /></a>
         <div style="width: 1430px; height: 240px; left: 10px; top: 1708px; position: absolute; background: rgba(217, 217, 217, 0.50); border-radius: 45px"></div>
